# mocha

./: .gitattributes  .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml  release.yml
doc/img/: README.md  mocha.d2
doc/proj/: gpio.md  stages.md
hw/ip/common_cells/rtl/: id_queue.sv
hw/top_chip/: REUSE.toml  top_chip_system.core
hw/top_chip/data/: alert_handler_cfg.hjson  chip_testplan.hjson  pins_genesys2.xdc  rv_plic_cfg.hjson
hw/top_chip/dv/: README.md  mocha_sim_cfgs.hjson  top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/dv/env/: mem_clear_util.sv  top_chip_dv_env.core  top_chip_dv_env.sv  top_chip_dv_env_cfg.sv  top_chip_dv_env_cov.sv  top_chip_dv_env_pkg.sv  top_chip_dv_virtual_sequencer.sv
hw/top_chip/dv/sim_sram_axi/: README.md  sim_sram_axi_if.sv  sim_sram_axi_sink.sv
hw/top_chip/lint/: top_chip_system.vlt
hw/top_chip/rtl/: axi_sram.sv  chip_mocha_genesys2.sv  clkgen_xil7series.sv  mem_downsizer.sv  top_chip_system.sv  top_pkg.sv
nix/: fpga.nix
rdl/: mocha.rdl
sw/cmake/: tests.cmake
sw/device/bootrom/: bootrom.c
sw/device/devicetree/: REUSE.toml  mocha.S  mocha.dts
sw/device/examples/: CMakeLists.txt  hello_world.c  i2c.c  tag_check_dram.S
sw/device/lib/: builtin.h
sw/device/lib/hal/: CMakeLists.txt  gpio.c  gpio.h  mmio.h  mocha.c  mocha.h  mocha_regs.h  spi_device.c  spi_device.h  timer.c  timer.h  uart.c  uart.h
sw/device/tests/: CMakeLists.txt
util/: artefacts.py  build_sw_collateral_for_sim.py  check_artefacts.py  clang_format.py  generate_plic.sh  rdlgenerator.py  verilator_runner.sh
(+75 files in other folders)
